--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
 server.port=9090
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://stoorx.beget.tech/stoorx_order?useUnicode=true&serverTimezone=UTC
+spring.datasource.username=stoorx_order
+spring.datasource.password=12345678
 spring.jpa.generate-ddl=true
 
 logging.level.org.springframework.web=ERROR
