--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,28 @@
-server.port=9090
+# port
+server.port=8081
+spring.application.name=orderMicroservice
 
+# db options
 spring.datasource.url=jdbc:mysql://stoorx.beget.tech/stoorx_order?useUnicode=true&serverTimezone=UTC
 spring.datasource.username=stoorx_order
 spring.datasource.password=12345678
 spring.jpa.generate-ddl=true
 
+# logging options
 logging.level.org.springframework.web=ERROR
 logging.level.itmo.remedictes=DEBUG
-
-#создаст файл app.log в папке logs Tomcat сервера
-#logging.file=${catalina.home}/logs/app.log
-
-#создаст файл app.log по указанному пути
-#logging.file=/Users/leo/app.log
+logging.file.name=/home/elvis_emplada/Рабочий стол/Microservices/orderMicroservice/logs/orderLogs.log
 
 # паттерн логов для консоли
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 # паттерн логов для записи в файл
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+# eureka
+spring.devtools.restart.enabled = false
+eureka.client.serviceUrl.defaultZone = http://localhost:8085/eureka
+
+# rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
